fix(css): remove sidebar info on mobile

--- a/sass/_partials/sidebar.scss
+++ b/sass/_partials/sidebar.scss
@@ -18,6 +18,12 @@
     flex-direction: column;
     gap: 2rem;
   }
+
+  .info {
+    @include onmobile() {
+      display: none;
+    }
+  }
 }
 
 @media (max-width: $bp-mobile) {
